test/files/neg/t9438.scala

class C {
	val i: Int = 3.14
	def f(): Int =
		3.14
}
